--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
                         <i class="bi bi bi-chat-left-quote-fill"></i>
                         <span class="visibility-hidden">Testimonials</span>
                     </a></li>
-                <li><a href="index.html#map">
+                <!-- <li><a href="index.html#map">
                         <i class="bi bi-geo-alt-fill"></i>
                         <span class="visibility-hidden">Visit Us</span>
-                    </a></li>
+                    </a></li> -->
             </ul>
         </nav>
         <!-- #nav-menu-container -->
@@ -87,7 +87,7 @@
             </div>
 
             <div class="text-box3" data-aos="slide-right">
-                <a href="https://drive.google.com/file/d/1MhzupVjRs_5tRxpZFoPPkK44YWsothUR/view"
+                <a href="schedule.html"
                     target="_blank"><i class="fa fa-calendar"></i>&nbsp;SCHEDULE</a>
                 <span class="bar"> | </span>
                 <a href="https://drive.google.com/file/d/1yGA9cMQIbCgwwx0Z3attso68fHiw3X-w/view"
@@ -790,7 +790,7 @@
         <!-- End Testimonials Section -->
 
         <!-- ======= Map Section ======= -->
-        <section id="map">
+        <!-- <section id="map">
             <div class="container" data-aos="slide-left">
                 <h2 class="text-center">VISIT US</h2>
                 <div class="map-div">
@@ -800,7 +800,7 @@
                         aria-hidden="false" tabindex="0"></iframe>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- End Map Section -->
     </main>
     <!-- End #main -->
@@ -829,7 +829,7 @@
                             <ul>
                                 <li><a href="index.html#team" class="scroll-to"><i class="bi bi-caret-right-fill"></i> TEAM</a>
                                 </li>
-                                <li><a href="index.html#"><i class="bi bi-caret-right-fill"></i> SCHEDULE</a></li>
+                                <li><a href="schedule.html"><i class="bi bi-caret-right-fill"></i> SCHEDULE</a></li>
                                 <li><a href="index.html#executives" class="scroll-to"><i class="bi bi-caret-right-fill"></i>
                                         CANDIDATES</a></li>
                                 <li><a href="https://nominations.eciitk.com/" target="_blank"><i
