Feature: Implement FAQ page

--- a/index.html
+++ b/index.html
@@ -741,6 +741,7 @@
                                             class="bi bi-caret-right-fill"></i> NOMINATION PORTAL</a></li>
                                 <li><a href="https://complaints.eciitk.com/" target="_blank"><i
                                             class="bi bi-caret-right-fill"></i> COMPLAINTS PORTAL</a></li>
+                                <li><a href="faqs.html" target="_blank" class="bi bi-caret-right-fill">FAQs</a></li>
                             </ul>
                         </div>
                     </div>
