Feature: Added Gallery Section

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <!-- Main CSS files -->
     <link href="assets/css/base.css" rel="stylesheet" />
     <link href="assets/css/home.css" rel="stylesheet" />
+    <link rel="stylesheet" href="assets/css/gallerystyle.css">
 </head>
 
 <body>
@@ -533,7 +534,25 @@
                 </div>
             </div>
         </section>
-        <!-- End Team Section -->
+    <!-- End Team Section -->
+
+        <!-- Gallery -->
+         <div class="gallery_container">
+        <div class="left-text">
+            <h2 class="heading">Gallery</h2>
+            <p class="subheading">Upholding democracy with integrity, the Election Commission ensures free, fair, and transparent elections for a stronger nation.</p>
+        </div>
+        <div class="gallery" id="gallery">
+            <div class="gallery_box gallery_row-2" id="gallery_box_1-1" style="background-image: url(assets/images/gallery/EC\ room.jpg);"></div>
+            <div class="gallery_box gallery_col-2" style="background-image: url(assets/images/gallery/OAT.png);"></div>
+            <div class="gallery_box" style="background-image: url(assets/images/gallery/OAT\ 2.png);"></div>
+            <div class="gallery_box gallery_row-2" style="background-image: url(assets/images/gallery/After\ 2.jpg);"></div>
+            <div class="gallery_box gallery_col-2" style="background-image: url(assets/images/gallery/AFter.jpg);"></div>
+            <div class="gallery_box" style="background-image: url(assets/images/gallery/SenateHall.png);"></div>
+            <div class="gallery_box gallery_col-2" style="background-image: url(assets/images/gallery/EC\ room.jpg);"></div>
+        </div>
+    </div>
+         <!-- End Gallery Section  -->
 
         <!-- ======= Testimonials Section ======= -->
         <section id="testimonials">
