--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
          <div class="gallery_container">
         <div class="left-text">
             <h2 class="heading">Gallery</h2>
-            <p class="subheading">Upholding democracy with integrity, the Election Commission ensures free, fair, and transparent elections for a stronger nation.</p>
+            <p class="subheading">Upholding democracy with integrity, the Election Commission ensures free, fair, and transparent elections for a stronger campus.</p>
         </div>
         <div class="gallery" id="gallery">
             <div class="gallery_box gallery_row-2" id="gallery_box_1-1" style="background-image: url(assets/images/gallery/EC\ room.jpg);"></div>
