updated general.html and index.html

--- a/general.html
+++ b/general.html
@@ -5,15 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Election Commision IITK - Senator Candidates</title>
     <link rel="stylesheet" href="assets\\css\\candidates.css">
+    <link rel="stylesheet" href="assets\\css\\home.css">
     <link rel="icon" href="assets\images\logo\logo.png">
 </head>
 <body>
     <header>
         GENERAL ELECTIONS'24
     </header>
-    <h1>
-        EXECUTIVE CANDIDATES
-    </h1>
+    <div class = 'navbar'>
+       <span class="active Executive">Executive Candidates</span>
+       <span class="inactive Y23">Senators Y23</span>
+       <span class="inactive Y22">Senators Y22</span>
+    </div>
+    
+
+
+
+
     <!-- <div class="profileCard">
         <div class="imgSenator">
             <img src="images/Aditya Sati.jpg">
